--- a/src/Playroom/Playroom.less
+++ b/src/Playroom/Playroom.less
@@ -22,6 +22,10 @@
 }
 @editor-font-family: Source Code Pro, Firacode, Hasklig, Menlo, monospace;
 
+.monacoEditor {
+  height: 100%;
+}
+
 .previewContainer {
   position: fixed;
   top: 0;
